# harness-boot

./: .gitignore  .prettierrc.json  CHANGELOG.md  CLAUDE.md  README.ko.md  README.md  eslint.config.js  package-lock.json  package.json  pytest.ini  requirements-dev.txt  self_check.sh  spec.yaml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.claude-plugin/: marketplace.json  plugin.json
.harness/: README.md  spec.archive.yaml  spec.yaml  state.yaml
agents/: README.md  a11y-auditor.md  audio-designer.md  backend-engineer.md  frontend-engineer.md  implementer.md  integrator.md  orchestrator.md  performance-engineer.md  product-planner.md  qa-engineer.md  researcher.md  reviewer.md  security-engineer.md  software-engineer.md  tech-writer.md  ux-architect.md  visual-designer.md
commands/: _work-ceremonies.md  _work-orchestration.md  analyze.md  check.md  drive.md  events.md  init.md  metrics.md  setup.md  spec.md  start.md  status.md  sync.md  work.md
docs/: communication-rules.md  constitution.md  dogfood-replay-v0.12.0.md  hooks.md  migration-subagent-dispatch.md  preamble-spec.md  setup-guide.md  skill-layout.md  spec-schema.md  start-prompts.md
hooks/: capture-tokens.sh  hooks.json  pre-commit-phase2.sh  prompt-log.sh  session-bootstrap.sh
legacy/: CLAUDE.md  README.ko.md  README.md
schemas/: spec.schema.json
scripts/: README.md  build-rule-fragments.mjs  canonical_hash.py  check-doc-sizes.sh  check.py  (+31 more)
tests/fixtures/brownfield-repos/python-fastapi/: README.md  pyproject.toml
tests/fixtures/brownfield-repos/python-fastapi/src/app/: models.py
(+642 files in other folders)
