[project]
name = "sample-api"
version = "0.1.0"
description = "Minimal FastAPI fixture for brownfield reconnaissance tests."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
